fixed spacing

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -76,7 +76,7 @@
   );
   border-bottom: 10px solid var(--accent-color);
   padding-top: 14px;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
 }
 
 .topContent {
@@ -103,7 +103,7 @@ h1 {
 }
 
 h2 {
-  padding-bottom: 7rem;
+  padding-bottom: 2rem;
 }
 
 .break {
